# claude-templates

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/claude_templates/: cli.py  documentation.py  installer.py  modules.py  templates.py
src/claude_templates/_documentation/agents/.claude/rules/: documentation-agents.md
src/claude_templates/_documentation/econ-peer-review/.claude/rules/: documentation-econ-peer-review.md
src/claude_templates/_documentation/econ-research-paper/.claude/rules/: documentation-econ-research-paper.md
src/claude_templates/_documentation/ladybugdb-duckdb/.claude/rules/: documentation-ladybugdb-duckdb.md
src/claude_templates/_modules/agent-design/.claude/rules/: agent-design.md
src/claude_templates/_templates/analysis/: CLAUDE.md
src/claude_templates/_templates/coding/: CLAUDE.local.md.example  CLAUDE.md  MISTAKES.md
src/claude_templates/_templates/data-engineering/: BUGS.md  CLAUDE.local.md.example  CLAUDE.md  MISTAKES.md
src/claude_templates/_templates/data-engineering/.claude/: settings.local.json
src/claude_templates/_templates/light-data/: CLAUDE.md
src/claude_templates/_templates/presentation/: CLAUDE.md
src/claude_templates/_templates/research/: CLAUDE.md
src/claude_templates/_templates/research-analytics/: CLAUDE.md
src/claude_templates/_templates/research/.claude/: settings.local.json
src/claude_templates/_templates/writing/: CLAUDE.md
tests/: test_cli.py  test_cli_documentation.py  test_cli_modules.py  test_documentation.py  test_installer.py  test_modules.py  test_templates.py
(+96 files in other folders)
